# owofetch-rs

./: Cargo.toml  README.md
art/: apple  arch  default  gentowo  manjaro
src/: cli.rs  info.rs  main.rs
