[package]
name = "uwufetch"
version = "0.1.0"
authors = ["nett_hier <lp@netthier.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.17"
structopt = "^0.3"
itertools = "^0.10"
uwuify = "^0.2"
owo-colors = "^2.0"
hex = "^0.4"
strum = { version = "^0", features = ["derive"] }